--- a/kubernetes/apps/default/n8n/app/ingress.yaml
+++ b/kubernetes/apps/default/n8n/app/ingress.yaml
@@ -11,9 +11,9 @@ metadata:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/description: Software Automation
     gethomepage.dev/group: Apps
-    gethomepage.dev/icon: mdi:water-flow
+    gethomepage.dev/icon: mdi-water-flow
     gethomepage.dev/name: n8n
-    #gethomepage.dev/widget.type: "emby"
+    gethomepage.dev/widget.type: ""
     gethomepage.dev/widget.url: "https://n8n.${SECRET_DOMAIN}"
     gethomepage.dev/pod-selector: ""
 spec:
