--- a/kubernetes/apps/default/homepage/app/helmrelease.yaml
+++ b/kubernetes/apps/default/homepage/app/helmrelease.yaml
@@ -38,6 +38,8 @@ spec:
               requests:
                 cpu: 25m
                 memory: 50Mi
+            env:
+              LOG_LEVEL: debug
             envFrom:
               - secretRef:
                   name: homepage-secret
