--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -77,7 +77,7 @@ data:
             widget:
               type: iframe
               name: Requests
-              src: https://grafana.monitoring.svc.cluster.local/d-solo/b0c235a4-d758-4aa7-8f09-7137af01edfd/ingress-logs?orgId=1&from=1703442917567&to=1703529317567&panelId=7
+              src: https://grafana.feldblyum.com/d-solo/b0c235a4-d758-4aa7-8f09-7137af01edfd/ingress-logs?orgId=1&from=1703442917567&to=1703529317567&panelId=7
               #classes: h-60 sm:h-60 md:h-60 lg:h-60 xl:h-60 2xl:h-72 # optional, use tailwind height classes, see https://tailwindcss.com/docs/height
               #referrerPolicy: same-origin # optional, no default
               #allowPolicy: autoplay; fullscreen; gamepad # optional, no default
