--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -79,7 +79,7 @@ data:
               name: Requests
               src: https://grafana.feldblyum.com/public-dashboards/807e9d3f774c48b49e4bae9d38869356
               #classes: h-60 sm:h-60 md:h-60 lg:h-60 xl:h-60 2xl:h-72 # optional, use tailwind height classes, see https://tailwindcss.com/docs/height
-              #referrerPolicy: same-origin # optional, no default
+              referrerPolicy: same-origin
               #allowPolicy: autoplay; fullscreen; gamepad # optional, no default
               #allowFullscreen: false # optional, default: true
               #loadingStrategy: eager # optional, default: eager
