--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -78,13 +78,12 @@ data:
               type: iframe
               name: Requests
               src: https://grafana.feldblyum.com/public-dashboards/807e9d3f774c48b49e4bae9d38869356
-              #classes: h-60 sm:h-60 md:h-60 lg:h-60 xl:h-60 2xl:h-72 # optional, use tailwind height classes, see https://tailwindcss.com/docs/height
+              classes: h-72 sm:h-72 md:h-72 lg:h-72 xl:h-72 2xl:h-96 # optional, use tailwind height classes, see https://tailwindcss.com/docs/height
               referrerPolicy: same-origin
-              #allowPolicy: autoplay; fullscreen; gamepad # optional, no default
-              #allowFullscreen: false # optional, default: true
+              allowPolicy: autoplay; fullscreen; gamepad # optional, no default
+              allowFullscreen: true # optional, default: true
               #loadingStrategy: eager # optional, default: eager
-              #allowScrolling: no # optional, default: yes
-              #refreshInterval: 2000 # optional, no default
+              refreshInterval: 2000 # optional, no default
 
     - Favorites:
         - My GitHub Repo:
