--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -109,10 +109,10 @@ data:
 
   settings.yaml: |
     ---
-    title: My Personal Home Dashboard
+    title: Home Network
     theme: dark
     color: slate
-    headerStyle: clean
+    headerStyle: boxedWidgets
     target: _blank
     layout:
       Media:
@@ -123,6 +123,10 @@ data:
       Favorites:
         style: row
         columns: 3
+      Monitoring:
+        style: row
+
+
     quicklaunch:
       searchDescription: true
       hideInternetSearch: true
