--- a/kubernetes/apps/default/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/default/frigate/app/helmrelease.yaml
@@ -106,6 +106,14 @@ spec:
         className: internal
         annotations:
           hajimari.io/icon: mdi:cctv
+          gethomepage.dev/enabled: "true"
+          gethomepage.dev/description: CCTV
+          gethomepage.dev/group: Apps
+          gethomepage.dev/icon: mdi-cctv
+          gethomepage.dev/name: frigate
+          gethomepage.dev/widget.type: frigate
+          gethomepage.dev/widget.url: "https://frigate.${SECRET_DOMAIN}"
+          gethomepage.dev/pod-selector: ""
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
