--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -27,6 +27,17 @@ stringData:
     SECRET_FRIGATE_PLUS_KEY: ENC[AES256_GCM,data:vhCaghO9Unl7GiiOnK/cPXtJJzTHvFxJKjDkhjDJXa+Q0urahbxcVyY1o57Vfz3F8rLvuX0h3XwMd1X5sONiKTIngcmpeyXV2zgTZSQ=,iv:GGLDJZ5BcJjcEtBVcqwGX3+ZZbqjrL4ALVFLnBxxFNk=,tag:59dRm4Kj+7aO8h5Xop4odg==,type:str]
     SECRET_PARSEABLE_USERNAME: ENC[AES256_GCM,data:aNe7PJnOzBI=,iv:L7bCRBNH26lT+el4MoRzqhi87bs19omaAyco6M3aAUE=,tag:7kXUG7OtKQSqEk0YLelkYg==,type:str]
     SECRET_PARSEABLE_PASSWORD: ENC[AES256_GCM,data:V+eIu8OnMZFy,iv:+mdGMbDFg8WUwQbJ969e4yXnDQWfEPVLaN25yNgNqUs=,tag:OUrAtXDaeUzBGaU4xhOMzA==,type:str]
+    HOMEPAGE_VAR_HOME_LATITUDE: ENC[AES256_GCM,data:DD836GMRsIpByg==,iv:/OUgcypBTgEXu0ii35doefArGZWZQGQddaZWzvP94ME=,tag:gTtqsTmcJwk5nLeVsNwM8Q==,type:str]
+    HOMEPAGE_VAR_HOME_LONGITUDE: ENC[AES256_GCM,data:w4+rPiauO0dq9e0=,iv:fIMuHjZ9Ta6LL+PpLYSsssl9+mP6mrPhHm1YpSJFS6Y=,tag:FCEVTg03zllZBsec4xaU7g==,type:str]
+    HOMEPAGE_VAR_RADARR_KEY: ENC[AES256_GCM,data:Pe+EVXws8jVySxzMm0/nqloAQcgWG3YjsCdXsDPOUbo=,iv:GFU89iWapp+1mdU//hoasy/rEs0LPwNCSd5I32/Zgt8=,tag:WXrAqMeJEIo5P4OIfoGeew==,type:str]
+    HOMEPAGE_VAR_SONARR_KEY: ENC[AES256_GCM,data:CnjkFHEKG0U9KeoyudpzG3Ts9jSFBLVetekRhDpuCcM=,iv:bSe3CuVVZEbWSjnGWNsnC+ZdV/V+W6LeRO/fDuuws0w=,tag:wY9px4MKkktBr7CgWqi3Aw==,type:str]
+    HOMEPAGE_VAR_BAZARR_KEY: ENC[AES256_GCM,data:3ruBShWWkgy+1lNEvllyxdnsWj6q8kZdLIYHOTXHPEw=,iv:dZVJh32ZKXdTK8oSUSm0N6rSdjxpfuKblryG6CV44qg=,tag:L3w+4iZQ1UqwnS4E/ZKqMA==,type:str]
+    HOMEPAGE_VAR_SABNZBD_KEY: ENC[AES256_GCM,data:rwdd3rrdTanpIYBig7t/6DR2mStijULtABMxJKF6jw0=,iv:U81GVSDYAG6lkWmp9ELKpEHPx2YbsT6NUB/KdxMoHFU=,tag:4EoiIgzxkQ5JdalVRpFokw==,type:str]
+    HOMEPAGE_VAR_SYNOLOGY_USERNAME: ENC[AES256_GCM,data:n/YXkZCmLSk=,iv:wF94aokzoOd7tjAESdfiiC5cy4WdDNByhbJ87naKuKw=,tag:EXEqgGNlBBdK6aQ1RjYYsw==,type:str]
+    HOMEPAGE_VAR_SYNOLOGY_PASSWORD: ENC[AES256_GCM,data:eR3wdVXvy2VX,iv:2/mlJfq6lVgOVyd35z7P8FkSm+8L09o8j3oHsSoU/uo=,tag:1W6kkLMfg69FwxxuvhqeaA==,type:str]
+    HOMEPAGE_VAR_GRAFANA_USERNAME: ENC[AES256_GCM,data:6cFq4o0=,iv:nJKBV7B4jTbT8oyhQ7n+UAYezx/GRL5ISMxGxiqRqlE=,tag:hU0t8Zae3bmqXynrCYoPzA==,type:str]
+    HOMEPAGE_VAR_GRAFANA_PASSWORD: ENC[AES256_GCM,data:Ks5qLcMMDFQG,iv:8kJ2JUHEUMDwnhHokx1Mu1EOnhAoDmncOFSCXI1F2WQ=,tag:Nby7IIei0c7HBo5vKxNtLw==,type:str]
+    HOMEPAGE_VAR_PLEX_TOKEN: ENC[AES256_GCM,data:ZjVawwJEa7kb90PnjP5beirFaO0=,iv:+AM282x8LBXE3yYVbT5SOAH/IbFbupsrDziSuIqdsUs=,tag:mnfFK9dc95zmMaCzLzrhDQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -42,8 +53,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-16T21:57:33Z"
-    mac: ENC[AES256_GCM,data:C/xPJ+CDSIdw4zs9yrAdIo4PiouqNkLcQA9rVz5YTPW8himECrMMJ018fTfgmnNva5r3HOy1L6Y+3JWF+B0UhGYU021rfA6fcsS7StFheVdBngjV8MJQ6ZMu7ATDfD7C4xMAPBX2Q6acbei9Io7c1SkB0yTZpXkOuEt/Kp560ek=,iv:fhF1lbjH3fjkUk1zkMr3CCMKChqVOeoR5whdTPnK5rI=,tag:80m2xSJoawLAwzk/VDd1Ng==,type:str]
+    lastmodified: "2023-12-26T00:35:18Z"
+    mac: ENC[AES256_GCM,data:6qr2ZqdsuxsEuCFxBslNFtiMThopxHSXMFyzTa7Qd+eji6svt0j6QUW7DPeNv0kLX3ZiRY7eWh0J0n0DnsIqawfsOLSFXx7AM0a9nogUvcF0/+yVpjs5wiP2Xb0of+uGuqUCmDn1Ax8OUc+5DDuMHADrDOIsbuF+cfFOHLYIGys=,iv:S/f4UQrZLjx62R/aZ53ygW06d0pU29/4+V2lsUvfGKs=,tag:Z1A6MluODce+dUu9FBJXhg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
