--- a/kubernetes/apps/media/radarr/app/ingress.yaml
+++ b/kubernetes/apps/media/radarr/app/ingress.yaml
@@ -8,6 +8,15 @@ metadata:
     external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
     hajimari.io/enable: "true"
     hajimari.io/icon: mdi:filmstrip
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/description: Movie Management
+    gethomepage.dev/group: Media
+    gethomepage.dev/icon: mdi-filmstrip
+    gethomepage.dev/name: radarr
+    gethomepage.dev/widget.type: radarr
+    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_RADARR_KEY}"
+    gethomepage.dev/widget.url: http://radarr.media.svc.cluster.local:80
+    gethomepage.dev/pod-selector: ""
 spec:
   ingressClassName: internal
   rules:
