--- a/kubernetes/apps/default/homepage/app/rbac.yaml
+++ b/kubernetes/apps/default/homepage/app/rbac.yaml
@@ -32,7 +32,19 @@ rules:
     verbs:
       - get
       - list
-
+  - apiGroups:
+      - traefik.containo.us
+    resources:
+      - ingressroutes
+    verbs:
+      - get
+      - list
+  - apiGroups:
+      - apiextensions.k8s.io
+    resources:
+      - customresourcedefinitions/status
+    verbs:
+      - get
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/clusterrolebinding-rbac-v1.json
 apiVersion: rbac.authorization.k8s.io/v1
