--- a/kubernetes/apps/default/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/default/frigate/app/helmrelease.yaml
@@ -106,7 +106,7 @@ spec:
         className: internal
         annotations:
           hajimari.io/icon: mdi:cctv
-          gethomepage.dev/enabled: true
+          gethomepage.dev/enabled: "true"
           gethomepage.dev/group: Apps
           gethomepage.dev/icon: mdi-cctv
           gethomepage.dev/name: frigate
