--- a/kubernetes/apps/media/bazarr/app/ingress.yaml
+++ b/kubernetes/apps/media/bazarr/app/ingress.yaml
@@ -16,7 +16,7 @@ metadata:
     gethomepage.dev/widget.type: bazarr
     gethomepage.dev/widget.key: "${HOMEPAGE_VAR_BAZARR_KEY}"
     gethomepage.dev/widget.url: http://bazarr.media.svc.cluster.local:6767
-    gethomepage.dev/pod-selector: ""
+    gethomepage.dev/siteMonitor: https://bazarr.${SECRET_DOMAIN}
 spec:
   ingressClassName: internal
   rules:
