--- a/kubernetes/apps/media/sonarr/app/ingress.yaml
+++ b/kubernetes/apps/media/sonarr/app/ingress.yaml
@@ -16,7 +16,7 @@ metadata:
     gethomepage.dev/widget.type: sonarr
     gethomepage.dev/widget.key: "${HOMEPAGE_VAR_SONARR_KEY}"
     gethomepage.dev/widget.url: http://sonarr.media.svc.cluster.local:80
-    gethomepage.dev/pod-selector: ""
+    gethomepage.dev/siteMonitor: https://sonarr.${SECRET_DOMAIN}
 spec:
   ingressClassName: internal
   rules:
