--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -58,7 +58,20 @@ spec:
               index:
                 prefix: loki_index_
                 period: 24h
+        frontend:
+          # Maximum number of outstanding requests per tenant per frontend; requests
+          # beyond this error with HTTP 429.
+          # CLI flag: -querier.max-outstanding-requests-per-tenant
+          max_outstanding_per_tenant: 2048 # default = 100]
 
+          # Compress HTTP responses.
+          # CLI flag: -querier.compress-http-responses
+          compress_responses: true # default = false]
+
+          # Log queries that are slower than the specified duration. Set to 0 to disable.
+          # Set to < 0 to enable on all queries.
+          # CLI flag: -frontend.log-queries-longer-than
+          log_queries_longer_than: 20s
         common:
           path_prefix: /var/loki
           replication_factor: 3
