--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: "Renovate"
 
 on:
@@ -19,10 +20,10 @@ on:
   schedule:
     - cron: "0 * * * *"
   push:
-    branches: ["master"]
+    branches: ["main"]
     paths:
-      - .github/renovate-bot.json5
-      # - .github/renovate.json5
+      #- .github/renovate-bot.json5
+      - .github/renovate.json5
       - .github/renovate/**.json5
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
@@ -45,17 +46,28 @@ jobs:
     name: Renovate
     runs-on: ubuntu-latest
     steps:
-      - name: Generate Token
-        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2.1.0
-        id: generate-token
-        with:
-          app_id: "${{ secrets.BOT_APP_ID }}"
-          private_key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
+      # - name: Generate Token
+      #   uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2.1.0
+      #   id: generate-token
+      #   with:
+      #     app_id: "${{ secrets.BOT_APP_ID }}"
+      #     private_key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
 
-      - name: Checkout
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      # - name: Checkout
+      #   uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      #   with:
+      #     token: "${{ steps.generate-token.outputs.token }}"
+      - name: Generate Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
         with:
-          token: "${{ steps.generate-token.outputs.token }}"
+          app-id: "${{ secrets.BOT_APP_ID }}"
+          private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
+
+      - name: Checkout Default Branch
+        uses: actions/checkout@v4
+        with:
+          token: "${{ steps.app-token.outputs.token }}"
 
       - name: Override default config from dispatch variables
         shell: bash
