--- a/kubernetes/apps/default/spark/app/helmrelease.yaml
+++ b/kubernetes/apps/default/spark/app/helmrelease.yaml
@@ -35,26 +35,26 @@ spec:
               repository: docker.io/bitnami/spark
               tag: 3.5.0-debian-11-r17
             env:
-            - SPARK_MODE=master
-            - SPARK_RPC_AUTHENTICATION_ENABLED=no
-            - SPARK_RPC_ENCRYPTION_ENABLED=no
-            - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-            - SPARK_SSL_ENABLED=no
-            - SPARK_USER=spark
+              SPARK_MODE: master
+              SPARK_RPC_AUTHENTICATION_ENABLED: no
+              SPARK_RPC_ENCRYPTION_ENABLED: no
+              SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED: no
+              SPARK_SSL_ENABLED: no
+              SPARK_USER: spark
           worker:
             image:
               repository: docker.io/bitnami/spark
               tag: 3.5.0-debian-11-r17
             env:
-            - SPARK_MODE=worker
-            - SPARK_MASTER_URL=spark://spark:7077
-            - SPARK_WORKER_MEMORY=1G
-            - SPARK_WORKER_CORES=1
-            - SPARK_RPC_AUTHENTICATION_ENABLED=no
-            - SPARK_RPC_ENCRYPTION_ENABLED=no
-            - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-            - SPARK_SSL_ENABLED=no
-            - SPARK_USER=spark
+              SPARK_MODE: worker
+              SPARK_MASTER_URL: spark://spark:7077
+              SPARK_WORKER_MEMORY: 1G
+              SPARK_WORKER_CORES: "1"
+              SPARK_RPC_AUTHENTICATION_ENABLED: no
+              SPARK_RPC_ENCRYPTION_ENABLED: no
+              SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED: no
+              SPARK_SSL_ENABLED: no
+              SPARK_USER: spark
         pod:
           nodeSelector:
             kubernetes.io/hostname: amd64
