--- a/kubernetes/apps/default/spark/app/helmrelease.yaml
+++ b/kubernetes/apps/default/spark/app/helmrelease.yaml
@@ -36,6 +36,7 @@ spec:
               tag: 3.5.0-debian-11-r17
             env:
               SPARK_MODE: master
+              SPARK_MASTER_HOST: spark-master
               SPARK_RPC_AUTHENTICATION_ENABLED: no
               SPARK_RPC_ENCRYPTION_ENABLED: no
               SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED: no
